--- a/app/assets/stylesheets/mappings.css.scss
+++ b/app/assets/stylesheets/mappings.css.scss
@@ -108,10 +108,11 @@ input.destroy-field {
 }
 
 .sf-row.affix {
+  padding-top: 30px;
   position: fixed;
   top: 0;
   left: 0;
-  width: auto;
+  right: 0;
   z-index: 1000;
   -webkit-transition: all 1s ease-in;
   transition: all 0.5s ease-in;
