--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -4,7 +4,7 @@
 
 <header class="header-image">
   <div class="headline">
-    <h1><i class="fa fa-connectdevelop"></i>
+    <h1><i class="fa fa-cubes"></i>
  open<strong>Integrations</strong></h1>
     <h3>Your apps are <strong>better</strong> together.</h3>
     </div>
